[package]
name = "meson-contracts-solana"
version = "3.0.1"
authors = ["Github @wyf-ACCEPT"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"        ## Very important magic!!

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
solana-program = "1.14.12"
# hex-string = "0.1.0"

[dev-dependencies]
solana-program-test = "1.14.12"
solana-sdk = "1.14.12"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]